# stechs_registry_api

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  example.env  pyproject.toml
app/: main.py  settings.py
app/alembic/: env.py
app/alembic/versions/: 8869a73bc11c_initial_migration.py
app/api/: dependencies.py  models.py  routes.py
app/database/: models.py  repository.py  session.py
scripts/: create_test_db.sh
tests/: conftest.py  test_api.py
